# slb-agent

./: .env.example  .gitignore  DESIGN.md  MULTI_SCENARIO_PLAN.md  PLAN.md  README.md  ROADMAP.md  claude.md  pyproject.toml
app/: __init__.py  api.py  config.py  exceptions.py  models.py  orchestrator.py  revision_policy.py  run_store.py  scenario_orchestrator.py  validation.py
app/engine/: __init__.py  explanations.py  metrics.py  selector.py
app/llm/: __init__.py  interface.py  mock.py  openai_client.py  prompts.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: runs.ts
frontend/src/components/: AdvancedConfigSection.tsx  AssetTable.tsx  AssetsPanel.tsx  AuditTraceTimeline.tsx  CorporateStateCard.tsx  ErrorBoundary.tsx  LeftSidebar.tsx  LoadingSpinner.tsx  MetricsCard.tsx  NumericInvariantsCard.tsx  RunList.tsx  RunsPanel.tsx  ScenarioForm.tsx  SectionNav.tsx  index.ts
scripts/: debug_b3_first_revision.py  debug_b3_variance.py  debug_llm_extraction.py  demo_all_scenarios.py  demo_portfolio_b.py  demo_with_openai.py  run_server.py  test_dc_only_infeasible.py  test_toy3.py  test_toy3_clean.py
tests/: __init__.py  test_api.py  test_audit_trace.py  test_config.py  test_explanations.py  test_hard_constraint_immutability.py  test_llm_mock.py  test_metrics.py  test_model_alignment.py  test_models.py  test_numeric_overrides.py  test_orchestrator.py  test_prompts.py  test_revision_policy.py  test_run_store.py  test_runs_api.py  test_scenario_orchestrator.py  test_selector.py  test_toy_scenarios.py  test_validation.py
(+4 files in other folders)
